[package]
name = "etcd-reverse-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.50", features = ["derive"] }
etcd-client = "0.17.0"
log = "0.4.28"
rand = "0.9.2"
simple_logger = "5.1"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
