[package]
name = "etcd-reverse-proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5.50", features = ["derive"] }
etcd-client = "0.17.0"
log = "0.4.28"
pingora = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.1"
thiserror = "2.0"
tokio = { version = "1", features = ["net", "time"] }
toml = "0.9"

[workspace.metadata.cross.build]
zig = true
pre-build = [
  "apt-get update && apt-get --assume-yes install cmake protobuf-compiler",
]
