[package]
name = "etcd-reverse-proxy"
version = "0.3.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
clap = { version = "4.5.50", features = ["derive"] }
etcd-client = "0.17.0"
log = "0.4.28"
mlua = { version = "0.11.4", features = [
  "vendored",
  "serde",
  "luajit",
  "anyhow",
] }
pingora = "0.6.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "5.1"
thiserror = "2.0"
tokio = { version = "1", features = ["net", "time", "sync", "rt"] }

[workspace.metadata.cross.build]
zig = true
pre-build = [
  "apt-get update && apt-get --assume-yes install cmake protobuf-compiler",
]

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
zig = false
